--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script async src="/static/modernizr.custom.js"></script>
   </body>
 </html>
