--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>chen-williams</title>
+    <title>Chen Williams</title>
+    <meta name="description" content="">
   </head>
   <body>
     <div id="app"></div>
