--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <!-- end favicons -->
+    <!-- open graph -->
+    <meta property="og:image" content="/static/CCKW-Cube-Hero.jpg" />
   </head>
   <body>
     <div id="app"></div>
