og descrip, og img - cannonical

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- open graph -->
-    <meta property="og:image" content="/static/CCKW-Cube-Hero.jpg" />
+    <meta property="og:description" content="Chen Chen" />
+    <meta property="og:image" content="https://cckw.us/static/CCKW-Cube-Hero.jpg" />
   </head>
   <body>
     <div id="app"></div>
