set default descrip

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Chen Williams</title>
-    <meta name="description" content="">
+    <meta name="description" content="Chen Chen & Kai Williams is a design studio that explores materials and new ways to use them">
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,7 +14,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- open graph -->
-    <meta property="og:description" content="Chen Chen" />
+    <meta property="og:description" content="Chen Chen & Kai Williams is a design studio that explores materials and new ways to use them" />
     <meta property="og:image" content="https://cckw.us/static/CCKW-Cube-Hero.jpg" />
   </head>
   <body>
