Google Analytics, allow env var overrides from Netlify

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script async src="/static/modernizr.custom.js"></script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
+    <script async src="/static/autotrack.custom.js"></script>
   </body>
 </html>
