--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Chen Williams</title>
+    <title>Chen Chen & Kai Williams</title>
     <meta name="description" content="Chen Chen & Kai Williams is a design studio that explores materials and new ways to use them">
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
