index - add preconnect

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- open graph -->
     <meta property="og:description" content="Chen Chen & Kai Williams is a design studio that explores materials and new ways to use them" />
     <meta property="og:image" content="https://cckw.us/static/CCKW-Cube-Hero.jpg" />
+    <!-- preconnect -->
+    <link rel="preconnect" href="https://cckwus.cdn.prismic.io" crossorigin>
+    <link rel="preconnect" href="https://chen-williams.myshopify.com" crossorigin>
+    <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
   </head>
   <body>
     <div id="app"></div>
